--- a/Backend/SchoolManagement.Application/SchoolManagement.Application.csproj
+++ b/Backend/SchoolManagement.Application/SchoolManagement.Application.csproj
@@ -8,14 +8,19 @@
 
   <ItemGroup>
     <PackageReference Include="AutoMapper" Version="12.0.1" />
+    <PackageReference Include="BCrypt.Net-Next" Version="4.0.3" />
     <PackageReference Include="FluentValidation" Version="11.8.0" />
     <PackageReference Include="MediatR" Version="12.2.0" />
-    <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="8.0.0" />
+	<PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.0" />
+	<PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="8.0.0" />
+	<PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="7.0.3" />
   </ItemGroup>
 
+
   <ItemGroup>
-    <ProjectReference Include="..\SchoolManagement.Domain\SchoolManagement.Domain.csproj" />
-    <ProjectReference Include="..\SchoolManagement.Shared\SchoolManagement.Shared.csproj" />
+	<ProjectReference Include="..\SchoolManagement.Domain\SchoolManagement.Domain.csproj" />
+	<ProjectReference Include="..\SchoolManagement.Shared\SchoolManagement.Shared.csproj" />
+	<ProjectReference Include="..\SchoolManagement.Infrastructure\SchoolManagement.Infrastructure.csproj" />
   </ItemGroup>
 
 </Project>
