--- a/Backend/SchoolManagement.Shared/SchoolManagement.Shared.csproj
+++ b/Backend/SchoolManagement.Shared/SchoolManagement.Shared.csproj
@@ -6,4 +6,9 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+	<ItemGroup>
+		<ProjectReference Include="..\SchoolManagement.Domain\SchoolManagement.Domain.csproj" />
+	</ItemGroup>
+
+
 </Project>
