--- a/Backend/SchoolManagement.API/appsettings.json
+++ b/Backend/SchoolManagement.API/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=LAPTOP-PKFIC3S5\\SQLEXPRESS;Database=SchoolManagementDB;Trusted_Connection=true;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=LAPTOP-PKFIC3S5\\SQLEXPRESS;Database=SchoolManagementDB;Trusted_Connection=true;MultipleActiveResultSets=true;Encrypt=False"
   },
   "Jwt": {
     "Key": "your-super-secret-key-that-is-at-least-32-characters-long",
