Fix API connectivity and CORS issues

--- a/Backend/SchoolManagement.API/appsettings.json
+++ b/Backend/SchoolManagement.API/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=LAPTOP-PKFIC3S5\\SQLEXPRESS;Database=SchoolManagementDB;Trusted_Connection=true;MultipleActiveResultSets=true;Encrypt=False"
+    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=SchoolManagementDB;Trusted_Connection=true;MultipleActiveResultSets=true;Encrypt=False"
   },
   "Jwt": {
     "Key": "your-super-secret-key-that-is-at-least-32-characters-long",
@@ -10,7 +10,8 @@
   "Logging": {
     "LogLevel": {
       "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+      "Microsoft.AspNetCore": "Warning",
+      "Microsoft.EntityFrameworkCore": "Information"
     }
   },
   "AllowedHosts": "*"
