--- a/Backend/SchoolManagement.API/appsettings.json
+++ b/Backend/SchoolManagement.API/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=SchoolManagementDB.db"
+    "DefaultConnection": "Data Source=LAPTOP-PKFIC3S5\\SQLEXPRESS;Initial Catalog=SchoolDb;Integrated Security=True;Encrypt=True;Trust Server Certificate=True"
   },
   "Jwt": {
     "Key": "your-super-secret-key-that-is-at-least-32-characters-long",
